--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # HTTP reponse charset ?? ???
 server.servlet.encoding.force-response:true
+
+spring.security.user.name = 1234
+spring.security.user.password = 1234
+spring.security.user.roles = USER
+
+spring.config.import = classpath:properties/env.properties
