Refactoring using lombok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # HTTP reponse charset ?? ???
 server.servlet.encoding.force-response:true
 
+# h2 DB, ? ?? ?? ??
+spring.h2.console.enabled=true
 spring.security.user.name = 1234
 spring.security.user.password = 1234
 spring.security.user.roles = USER
