.properties separation test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ server.servlet.encoding.force-response:true
 
 # h2 DB, ? ?? ?? ??
 spring.h2.console.enabled=true
-spring.security.user.name = 1234
-spring.security.user.password = 1234
-spring.security.user.roles = USER
+# spring.security.user.name = 1234
+# spring.security.user.password = 1234
+# spring.security.user.roles = USER
 
-spring.config.import = classpath:properties/env.properties
+# spring.config.import = classpath:properties/env.properties
+spring.profiles.active=prod
