Use system variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.h2.console.enabled=true
 # spring.security.user.roles = USER
 
 # spring.config.import = classpath:properties/env.properties
-spring.profiles.active=prod
+# spring.profiles.active=prod
