--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-# HTTP reponse charset ?? ???
+# HTTP response charset ?? ???
 server.servlet.encoding.force-response:true
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=sa
+spring.datasource.driver-class-name=org.h2.Driver
 
 # h2 DB, ? ?? ?? ??
 spring.h2.console.enabled=true
